--- a/project-template_cz.ipynb
+++ b/project-template_cz.ipynb
@@ -326,9 +326,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p /root/nd009t-c1-intro-to-ml-project-starter/.kaggle\n",
-    "!touch /root/nd009t-c1-intro-to-ml-project-starter/.kaggle/kaggle.json\n",
-    "!chmod 600 /root/nd009t-c1-intro-to-ml-project-starter/.kaggle/kaggle.json"
+    "#!mkdir -p /root/nd009t-c1-intro-to-ml-project-starter/.kaggle\n",
+    "#!touch /root/nd009t-c1-intro-to-ml-project-starter/.kaggle/kaggle.json\n",
+    "#!chmod 600 /root/nd009t-c1-intro-to-ml-project-starter/.kaggle/kaggle.json"
    ]
   },
   {
@@ -390,21 +390,6 @@
     "# If you already downloaded it you can use the -o command to overwrite the file\n",
     "!unzip -o bike-sharing-demand.zip"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: 1: kaggle: not found\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
